--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -26,6 +26,7 @@
 \usepackage{appendix}
 
 
+
 \AtBeginDocument{%
   \renewcommand\tablename{Tabla}
   \renewcommand{\bibname}{Referencias}
@@ -97,15 +98,15 @@
 	    {\fontsize{18}{20} \textbf{ESCOM}}\vspace{2cm}\\
 	    
 	    {\fontsize{14}{20} \textit{Trabajo Terminal}}\vspace{1cm}\\
-	    {\fontsize{16}{20} \textbf{``Aplicaci\'on de cifrado contra adversarios clasificadores, para el correo electr\'onico''}}\vspace{1cm}\\
-	    {\fontsize{14}{20} \textit{2015-A010}}\vspace{1cm}\\
+	    {\fontsize{16}{20} \textbf{``Protocolo criptográfico para el almacenamiento sin duplicados en la nube, resistente a ataques por fuerza bruta.''}}\vspace{1cm}\\
+	    {\fontsize{14}{20} \textit{2016-B045}}\vspace{1cm}\\
 	    {\fontsize{14}{20} \textit{Presentan}}\\
-	    {\fontsize{14}{20} \textbf{Arcos Ayala Jonathan\\Zepeda Ibarra Allan Ulises}}\vspace{2.5cm}\\
-	    {\fontsize{14}{20} \textit{Directores}}\\
-	    {\fontsize{14}{20} \textbf{Dra. Sandra D\'\i az Santiago \\M. en C. Manuel Alejandro Soto Ramos}}\vspace{4.5cm}\\
+	    {\fontsize{14}{20} \textbf{Eder Jonathan Aguirre Cruz \\ Diana Leslie González Olivier \\ Jhonatan Saulés Cortés }}\vspace{2.5cm}\\
+	    {\fontsize{14}{20} \textit{Directora}}\\
+	    {\fontsize{14}{20} \textbf{Dra. Sandra D\'\i az Santiago}}\vspace{4.5cm}\\
 	    \end{center}
 
-	    \hfill  \fontsize{14}{20} \textbf{Mayo 2016}
+	    \hfill  \fontsize{14}{20} \textbf{Mayo 2017}
 	    
 	}
 \end{titlepage}
