--- a/TT-2016-B045/archivosTex/preliminares.tex
+++ b/TT-2016-B045/archivosTex/preliminares.tex
@@ -167,7 +167,14 @@ bloques iterativo depende del nivel de seguridad deseado.
 
 La sustitución es el reemplazo de un bloque de $n$ bits por otro bloque de $n$ bits en un espacio de 
 $2^{k}$~\cite{bloc}. Los cifradores por bloques mas usados son AES (Advanced Encryption Standard, por sus 
-siglas en ingl\'es) y DES (Data Encryption Standard, por sus siglas en ingl\'es).
+siglas en ingl\'es) y DES (Data Encryption Standard, por sus siglas en ingl\'es). \\ \\ Los cifradores por bloques pueden ser representados mediante el siguiente diagrama. ~\ref{fig:2-2-2}.
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=10cm, height=5cm]{./images/CifradoBloques.jpg}
+	\caption{Diagrama Cifradores por Bloques}
+	\label{fig:2-2-2}
+\end{figure}
 
 \pagebreak
 
